--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,8 +25,9 @@
 	<!-- Google Analytics -->
 	{{ template "_internal/google_analytics_async.html" . }}
 	<!-- highlight.js -->
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
-	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+	<link rel="stylesheet"
+	href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.12.0/build/styles/default.min.css">
+	<script 	src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.12.0/build/highlight.min.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
 
 </head>
